formver.compiler-plugin/testData/diagnostics/uniqueness_checker/return.kt
// UNIQUE_CHECK_ONLY

import org.jetbrains.kotlin.formver.plugin.Borrowed
import org.jetbrains.kotlin.formver.plugin.Unique

class A {
    var x: @Unique Any = Any()
    var w: @Unique Any = Any()
}

class B {
    var y: @Unique A = A()
}

// Returning locals

fun `return shared`(a: Any): Any {
    return a
}

fun `return borrowed`(a: @Borrowed Any): Any {
    return <!LOCALITY_MISMATCH!>a<!>
}

fun `return unique`(a: @Unique Any): Any {
    return a
}

fun `return unique-borrowed`(a: @Unique @Borrowed Any): Any {
    return <!LOCALITY_MISMATCH!>a<!>
}

// Returning subproperties

fun `return shared subproperty`(a: B): Any {
    return a.y
}

fun `return borrowed subproperty`(a: @Borrowed B): Any {
    return a.y
}

fun `return unique subproperty`(a: @Unique B): Any {
    return a.y
}

fun `return unique-borrowed subproperty`(a: @Unique @Borrowed B): Any {
    return a.y
}
